--- a/MapExplorer-macOS/Sources/Controllers/Base.lproj/Main.storyboard
+++ b/MapExplorer-macOS/Sources/Controllers/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
-        <plugIn identifier="com.apple.MapKitIBPlugin" version="13771"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -702,28 +701,14 @@
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
-        <!--Map View Controller-->
+        <!--Gesture Demo Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="MapViewController" customModule="MapExplorer_macOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="GestureDemoController" customModule="MapExplorer_macOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="798" height="558"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <subviews>
-                            <mapView mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4ZL-dt-oMm">
-                                <rect key="frame" x="0.0" y="0.0" width="798" height="558"/>
-                            </mapView>
-                        </subviews>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="4ZL-dt-oMm" secondAttribute="trailing" id="Kr8-ZE-get"/>
-                            <constraint firstItem="4ZL-dt-oMm" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="OUb-UL-9Xl"/>
-                            <constraint firstAttribute="bottom" secondItem="4ZL-dt-oMm" secondAttribute="bottom" id="WTz-Ru-dPR"/>
-                            <constraint firstItem="4ZL-dt-oMm" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="xgX-gz-l3X"/>
-                        </constraints>
                     </view>
-                    <connections>
-                        <outlet property="mapView" destination="4ZL-dt-oMm" id="6rO-1o-9eJ"/>
-                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
